   'faxbuffers' is used and fax tones are detected, the channel will dynamically
   switch to the configured faxbuffers policy.  For example, to use 6 buffers
   and a 'full' buffer policy for a fax transmission, add:
     faxbuffers=>6,full
   The faxbuffers configuration will be in affect until the call is torn down.

Dialplan Functions
------------------
 * Added a new dialplan function, CURLOPT, which permits setting various
   options that may be useful with the CURL dialplan function, such as
   cookies, proxies, connection timeouts, passwords, etc.
 * Permit the syntax and synopsis fields of the corresponding dialplan
   functions to be individually set from func_odbc.conf.
 * Added debugging CLI functions to func_odbc, 'odbc read' and 'odbc write'.
 * func_odbc now may specify an insert query to execute, when the write query
   affects 0 rows (usually indicating that no such row exists).
 * Added a new dialplan function, LISTFILTER, which permits removing elements
   from a set list, by name.  Uses the same general syntax as the existing CUT
   and FIELDQTY dialplan functions, which also manage lists.
 * Added REALTIME_FIELD and REALTIME_HASH, which should aid users in better
   obtaining realtime data from the dialplan.
 * Added LOCAL_PEEK, which allows access to variables in any stack frame within
   a subroutine when using the GoSub() and Return() applications.
 * Added AUDIOHOOK_INHERIT. For information on its use, please see the output
   of "core show function AUDIOHOOK_INHERIT" from the CLI
 * Added AES_ENCRYPT. For information on its use, please see the output
   of "core show function AES_ENCRYPT" from the CLI
 * Added AES_DECRYPT. For information on its use, please see the output
   of "core show function AES_DECRYPT" from the CLI
 * func_odbc now supports database transactions across multiple queries.

Applications
------------
 * Scheduled meetme conferences may now have their end times extended by
   using MeetMeAdmin.